applications/deployment-helm-chart/template.yml
---
# Source: deployment-helm-chart/templates/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: training-app-backend-prod
  labels:
    name: training-app-backend-prod
---
# Source: deployment-helm-chart/templates/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: training-app-frontend-prod
  labels:
    name: training-app-frontend-prod
---
# Source: deployment-helm-chart/templates/backendDeployment.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: training-app-backend-prod
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
---
# Source: deployment-helm-chart/templates/qrDeployment.yml
apiVersion: v1
kind: Service
metadata:
  name: qr-service
  namespace: training-app-backend-prod
spec:
  selector:
    app: qr
  ports:
  - port: 8420
    targetPort: 8420
---
# Source: deployment-helm-chart/templates/websiteDeployment.yml
apiVersion: v1
kind: Service
metadata:
  name: websiteservice
  namespace: training-app-frontend-prod
spec:
  selector:
    app: website
  ports:
  - port: 80
    targetPort: 80
---
# Source: deployment-helm-chart/templates/backendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: training-app-backend-prod
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ilefrjiba/t-014-backend
        ports:
        - containerPort: 3000
---
# Source: deployment-helm-chart/templates/qrDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr
  namespace: training-app-backend-prod
spec:
  selector:
    matchLabels:
      app: qr
  template:
    metadata:
      labels:
        app: qr
    spec:
      containers:
      - name: qr
        image: ilefrjiba/t-014-qr
        ports:
        - containerPort: 8420
---
# Source: deployment-helm-chart/templates/websiteDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: training-app-frontend-prod
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: ilefrjiba/t-014-website
        ports:
        - containerPort: 80
        volumeMounts:
        - name: website-config
          mountPath: /usr/share/nginx/html/assets/configs

      volumes:
      - name: website-config
        configMap:
          name: website-config
---
# Source: deployment-helm-chart/templates/backendDeployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    name: backend-ingress
  namespace: training-app-backend-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  tls:
  - hosts:
    - backend.com
    secretName: certificate-secret
  rules:
  - host: backend.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 3000
---
# Source: deployment-helm-chart/templates/websiteDeployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  labels:
    name: website-ingress
  namespace: training-app-frontend-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  tls:
  - hosts:
    - comwork.com
    secretName: certificate-secret
  rules:
  - host: comwork.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: websiteservice
            port:
              number: 80
